force-app/src/objects/cpm__Targets__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Bank_Account_Id__c</fullName>
        <label>Bank Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Config__c</fullName>
        <description>Can be used by anyone who whats to give some additional config to a target</description>
        <label>Config</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Global_Target__c</fullName>
        <label>Global Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Targets</label>
</CustomObject>